2009-02-16  Adam Schreiber  <sadam@clemson.edu>

    * POTFILES.skip: remove unnecessary files

2009-02-15 Kenneth Nielsen <k.nielsen81@gmail.com>

	* da.po: Updated Danish translation by Ask H. Larsen

2009-02-15  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated initial Spanish translation

2009-02-15  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2009-02-14  Wouter Bolsterlee  <wbolster@svn.gnome.org>

	* nl.po: Updated Dutch translation by Wouter Bolsterlee.

=== seahorse 2.25.91 ===

2009-02-14  Theppitak Karoonboonyanan  <thep@linux.thai.net>

	* th.po: Updated Thai translation.

2009-02-14  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2009-02-14  Chao-Hsiung Liao  <j_h_liau@yahoo.com.tw>

	* zh_HK.po: Updated Traditional Chinese translation(Hong Kong).
	* zh_TW.po: Updated Traditional Chinese translation(Taiwan).

2009-02-13  Inaki Larranaga Murgoitio  <dooteo@euskalgnu.org>

	* eu.po: Updated Basque translation.

2009-02-13  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation

2009-02-12  Gil Forcada  <gforcada@gnome.org>

	* ca.po: Updated Catalan translation.

2009-02-11  Daniel Nylander <po@danielnylander.se>

	* sv.po: Updated Swedish translation.

2009-02-09  Gabor Kelemen  <kelemeng@gnome.hu>

	* hu.po: Translation updated.

2009-02-08  Clytie Siddall <clytie@riverland.net.au>

	* vi.po: Updated Vietnamese translation.

2009-02-04  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation.

==================== 2.25.90 ===========================
2009-02-02  Stef Walter  <stef@memberwebs.com>

	* POTFILES.in: Removed
	libcryptui/crui-x509-cert.c
	libcryptui/crui-x509-cert-basics.c
	libcryptui/crui-x509-cert-basics.glade
	libcryptui/crui-x509-cert-dialog.c
	libcryptui/crui-x509-cert-basics.ui

	* POTFILES.in: Added
	pkcs11/seahorse-pkcs11-certificate-props.c

2009-02-02  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
