@@ -14,11 +14,12 @@ gkr/seahorse-gkr-item-commands.c
 gkr/seahorse-gkr-item-properties.c
 gkr/seahorse-gkr-item-properties.glade
 gkr/seahorse-gkr-keyring.c
+gkr/seahorse-gkr-keyring-commands.c
 gkr/seahorse-gkr-keyring.glade
 gkr/seahorse-gkr-keyring-properties.c
 gkr/seahorse-gkr-operation.c
 gkr/seahorse-gkr-source.c
-gkr/seahorse-gkr-keyring-commands.c
+libcryptui/cryptui.c
 libcryptui/cryptui-key-chooser.c
 libcryptui/cryptui-key-list.c
 libegg/egg-datetime.c
@@ -39,17 +40,12 @@ libseahorse/seahorse-unknown-source.c
 libseahorse/seahorse-util.c
 libseahorse/seahorse-validity.c
 libseahorse/seahorse-widget.c
-libcryptui/cryptui.c
-pkcs11/seahorse-pkcs11-commands.c
-pkcs11/seahorse-pkcs11-certificate.c
-pkcs11/seahorse-pkcs11-certificate-props.c
 pgp/seahorse-add-subkey.glade
 pgp/seahorse-add-uid.glade
 pgp/seahorse-expires.glade
-pgp/seahorse-gpg-options.c
-pgp/seahorse-gpgme.c
 pgp/seahorse-gpgme-add-subkey.c
 pgp/seahorse-gpgme-add-uid.c
+pgp/seahorse-gpgme.c
 pgp/seahorse-gpgme-expires.c
 pgp/seahorse-gpgme-generate.c
 pgp/seahorse-gpgme-key.c
@@ -59,6 +55,7 @@ pgp/seahorse-gpgme-revoke.c
 pgp/seahorse-gpgme-sign.c
 pgp/seahorse-gpgme-source.c
 pgp/seahorse-gpgme-subkey.c
+pgp/seahorse-gpg-options.c
 pgp/seahorse-hkp-source.c
 pgp/seahorse-ldap-source.c
 pgp/seahorse-pgp-commands.c
@@ -70,14 +67,19 @@ pgp/seahorse-pgp-public-key-properties.glade
 pgp/seahorse-pgp-subkey.c
 pgp/seahorse-revoke.glade
 pgp/seahorse-server-source.c
-pgp/seahorse-sign.glade
 pgp/seahorse-signer.c
 pgp/seahorse-signer.glade
+pgp/seahorse-sign.glade
+pkcs11/seahorse-pkcs11-certificate.c
+pkcs11/seahorse-pkcs11-certificate-props.c
+pkcs11/seahorse-pkcs11-commands.c
 src/seahorse-change-passphrase.glade
 src/seahorse.desktop.in.in
 src/seahorse-generate-select.glade
+src/seahorse-key-manager.c
 src/seahorse-key-manager.glade
 src/seahorse-key-manager-store.c
+src/seahorse-keyserver-results.c
 src/seahorse-keyserver-results.glade
 src/seahorse-keyserver-search.c
 src/seahorse-keyserver-search.glade
