@@ -1,3 +1,7 @@
+2009-02-16  Gabor Kelemen  <kelemeng@gnome.hu>
+
+	* POTFILES.in: Added two missing files that were in .skip
+
 2009-02-16  Adam Schreiber  <sadam@clemson.edu>
 
     * POTFILES.skip: remove unnecessary files
